<resources>
    <string name="app_name">Tusur mobile</string>
    <string name="tusur">tusur</string>
    <string name="time_pair_1">8:50 10:25</string>
    <string name="time_pair_2">10:40 12:15</string>
    <string name="time_pair_3">13:15 14:50</string>
    <string name="time_pair_4">15:00 16:35</string>
    <string name="time_pair_5">16:45 18:20</string>
    <string name="time_pair_6">18:30 20:05</string>
    <string name="time_pair_7">20:15 21:50</string>
    <string name="_711_1">Группа 711-1</string>
    <string name="lection">Лекция</string>
</resources>